alignment issue fixed

--- a/css/css.css
+++ b/css/css.css
@@ -160,7 +160,7 @@ html a:hover {
 	text-align: center;
 	display: inline-block;
 	position: relative;
-	top: -103px;
+	top: -104px;
 }
 .user-bubble p {
     line-height: 100px;
